test/mutation_analysis/s0326_power_of_three/hafis/ablation_o3_full/mutants/13/result.txt
./test/mutation_analysis/s0326_power_of_three/hafis/ablation_o3_full/mutants/13/Solution.java:23: error: unreachable statement
        return true;
        ^
1 error
